--- a/go.html
+++ b/go.html
@@ -1,11 +1,11 @@
 <html>
 <table align="center" width="100%" cellspacing="0" border="1"><tr bgcolor="#EEEEEE"><td align="center"><b>Filename</b></td></tr>
-<tr><td><a href="¾÷¨®¦MÀI·Pª¾¼v¤ù\¾÷¨®¦MÀI·Pª¾¼v¤ù(126ÃD).html">¾÷¨®¦MÀI·Pª¾¼v¤ù</a></td></tr>
-<tr><td><a href="¾÷¨®±¡¹Ò¦¡ÃD¥Ø\¾÷¨®±¡¹Ò¦¡ÃD¥Ø(60ÃD)b.html">¾÷¨®±¡¹Ò¦¡ÃD¥Ø</a></td></tr>
-<tr><td><a href="¾÷¨®±¡¹Ò¦¡ÃD¥Ønew\¾÷¨®±¡¹Ò¦¡ÃD¥Ønew(60ÃD)b.html">¾÷¨®±¡¹Ò¦¡ÃD¥Ønew</a></td></tr>
-<tr><td><a href="¾÷¨®¼Ð»x¬O«DÃD\¾÷¨®¼Ð»x¬O«DÃD(176ÃD)b.html">¾÷¨®¼Ð»x¬O«DÃD</a></td></tr>
-<tr><td><a href="¾÷¨®¼Ð»x¿ï¾ÜÃD\¾÷¨®¼Ð»x¿ï¾ÜÃD(152ÃD)b.html">¾÷¨®¼Ð»x¿ï¾ÜÃD</a></td></tr>
-<tr><td><a href="¾÷¨®ªk³W¬O«DÃD(759ÃD)b.html">¾÷¨®ªk³W¬O«DÃD</a></td></tr>
-<tr><td><a href="¾÷¨®ªk³W¿ï¾ÜÃD (534ÃD)b.html">¾÷¨®ªk³W¿ï¾ÜÃD</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šå±éšªæ„ŸçŸ¥å½±ç‰‡\æ©Ÿè»Šå±éšªæ„ŸçŸ¥å½±ç‰‡(126é¡Œ).html">æ©Ÿè»Šå±éšªæ„ŸçŸ¥å½±ç‰‡</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šæƒ…å¢ƒå¼é¡Œç›®\æ©Ÿè»Šæƒ…å¢ƒå¼é¡Œç›®(60é¡Œ)b.html">æ©Ÿè»Šæƒ…å¢ƒå¼é¡Œç›®</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šæƒ…å¢ƒå¼é¡Œç›®new\æ©Ÿè»Šæƒ…å¢ƒå¼é¡Œç›®new(60é¡Œ)b.html">æ©Ÿè»Šæƒ…å¢ƒå¼é¡Œç›®new</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šæ¨™èªŒæ˜¯éžé¡Œ\æ©Ÿè»Šæ¨™èªŒæ˜¯éžé¡Œ(176é¡Œ)b.html">æ©Ÿè»Šæ¨™èªŒæ˜¯éžé¡Œ</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šæ¨™èªŒé¸æ“‡é¡Œ\æ©Ÿè»Šæ¨™èªŒé¸æ“‡é¡Œ(152é¡Œ)b.html">æ©Ÿè»Šæ¨™èªŒé¸æ“‡é¡Œ</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šæ³•è¦æ˜¯éžé¡Œ(759é¡Œ)b.html">æ©Ÿè»Šæ³•è¦æ˜¯éžé¡Œ</a></td></tr>
+<tr><td><a href="æ©Ÿè»Šæ³•è¦é¸æ“‡é¡Œ (534é¡Œ)b.html">æ©Ÿè»Šæ³•è¦é¸æ“‡é¡Œ</a></td></tr>
 </table>
 </html>
