--- a/go.html
+++ b/go.html
@@ -1,5 +1,9 @@
-<html>
-<table align="center" width="100%" cellspacing="0" border="1"><tr bgcolor="#EEEEEE"><td align="center"><b>Filename</b></td></tr>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8" />
+</head>
+
+<table align="center" width="30%" cellspacing="0" border="1"><tr bgcolor="#EEEEEE"><td align="center"><b>機車筆試模擬題庫 類型</b></td></tr>
 <tr><td align="center"><a href="機車危險感知影片\機車危險感知影片(126題).html">機車危險感知影片</a></td></tr>
 <tr><td align="center"><a href="機車情境式題目\機車情境式題目(60題)b.html">機車情境式題目</a></td></tr>
 <tr><td align="center"><a href="機車情境式題目new\機車情境式題目new(60題)b.html">機車情境式題目new</a></td></tr>
