--- a/go.html
+++ b/go.html
@@ -2,27 +2,45 @@
 <head>
   <meta charset="UTF-8" />
 </head>
-<style>
-div {
-  width: 30%;
-  margin: auto;
-  background-color: #FFF4A3;
-}
-</style>
-<table align="center" width="30%" cellspacing="0" border="1"><tr bgcolor="#EEEEEE"><td align="center"><b>機車筆試模擬題庫 類型</b></td></tr>
-<tr><td align="center"><a href="機車危險感知影片\機車危險感知影片(126題).html">機車危險感知影片</a></td></tr>
-<tr><td align="center"><a href="機車情境式題目\機車情境式題目(60題)b.html">機車情境式題目</a></td></tr>
-<tr><td align="center"><a href="機車情境式題目new\機車情境式題目new(60題)b.html">機車情境式題目new</a></td></tr>
-<tr><td align="center"><a href="機車標誌是非題\機車標誌是非題(176題)b.html">機車標誌是非題</a></td></tr>
-<tr><td align="center"><a href="機車標誌選擇題\機車標誌選擇題(152題)b.html">機車標誌選擇題</a></td></tr>
-<tr><td align="center"><a href="機車法規是非題(759題)b.html">機車法規是非題</a></td></tr>
-<tr><td align="center"><a href="機車法規選擇題 (534題)b.html">機車法規選擇題</a></td></tr>
-</table>
-<p>
-<div>
-  <h2></h2>
-  <p>本設計為台灣機車筆試之模擬測驗，因為台灣交通部公路總局汽機車線上隨機模擬考系統，每次只能練習50題，但全部題庫有一千多題，而且題目是隨機挑選，所以有些題目可能會完全練習不到，因此設計此模擬測驗。</p>
-  <p>本模擬測驗可以將全部的題目都測驗一遍</p>
-  <p>2025/5/28    Designed by  LTS</p>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="w3.css">
+
+<div class="w3-container w3-teal w3-center">
+<h1>機車筆試模擬題庫</h1>
 </div>
+
+<div class="w3-row ws-green w3-card-2">
+	<div class="w3-col w3-xxlarge " style="width:50px"><br><br>題庫類型</div>
+	<div class="w3-rest w3-container w3-blue w3-xlarge w3-center">
+		<p><a href="機車危險感知影片\機車危險感知影片(126題).html">機車危險感知影片</a></p>
+		<p><a href="機車情境式題目\機車情境式題目(60題)b.html">機車情境式題目</a></p>
+		<p><a href="機車情境式題目new\機車情境式題目new(60題)b.html">機車情境式題目new</a></p>
+		<p><a href="機車標誌是非題\機車標誌是非題(176題)b.html">機車標誌是非題</a></p>
+		<p><a href="機車標誌選擇題\機車標誌選擇題(152題)b.html">機車標誌選擇題</a></p>
+		<p><a href="機車法規是非題(759題)b.html">機車法規是非題</a></p>
+		<p><a href="機車法規選擇題 (534題)b.html">機車法規選擇題</a></p> 
+	</div>
+</div>
+
+<div class="w3-container w3-teal ">
+<h3>
+  <p>●本設計為台灣機車筆試之模擬測驗，因為台灣交通部公路總局汽機車線上隨機模擬考系統之全部題庫有一千多題，但每次只能練習50題，而且題目是隨機挑選，所以有些題目可能會完全練習不到，因此設計此模擬測驗。</p>
+  <p>●本模擬測驗可以將全部的題目都測驗一遍</p>
+  <p>●2025/5/28    Designed by  LTS</p>
+</h3>
+</div>
+
+<br>
+
+
+<br>
+<center>
+<h2>使用設定說明</h2>
+<div style="text-align:center">
+<img  src="01.jpg">
+<img  src="02.jpg">
+<img  src="03.jpg">
+</div>
+</center>
+
 </html>
