--- a/go.html
+++ b/go.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="w3.css">
 
 <div class="w3-container w3-teal w3-center">
-<h1>機車筆試模擬題庫</h1>
+<h1>機車筆試模擬測驗</h1>
 </div>
 
 <div class="w3-row ws-green w3-card-2">
